# hueston

./: .gitignore  Cargo.toml  README.md
hueston/: Cargo.toml
hueston-sync/: Cargo.toml
hueston-sync/src/: discovery.rs  effects.rs  main.rs  state.rs
hueston-sync/src/effects/: colorsweep.rs  fireplace.rs
hueston/src/: hue_bridge.rs  hue_bridge_client.rs  hue_light.rs  hue_resp.rs  lib.rs
scripts/: fireplace-calm.sh  fireplace-wild.sh
